# language

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  index.md  language.rs
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
patterns/: README.md  python.json
src/: main.rs
src/patterns/: functions.rs  loops.rs  mod.rs
