[package]
name = "language"
version = "0.1.0"
authors = ["Arian Mirahmadi <mirarianmir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
json = "0.12.4"
clap = { version = "3.1.5", features = ["derive"] }